--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,27 @@
         android:theme="@style/Theme.LanguageFarm"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".lang_ex1_activity"
+            android:exported="true"
+            android:theme="@style/Theme.LanguageFarm">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".lang_ex2_activity"
+            android:exported="true"
+            android:theme="@style/Theme.LanguageFarm">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".lang_ex3_activity"
             android:exported="true"
             android:theme="@style/Theme.LanguageFarm">
             <intent-filter>
