--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.LanguageFarm"
         tools:targetApi="31">
         <activity
+            android:name=".start_lang_exc_activity"
+            android:exported="true"
+            android:theme="@style/Theme.LanguageFarm">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".lang_ex1_activity"
             android:exported="true"
             android:theme="@style/Theme.LanguageFarm">
@@ -34,6 +44,16 @@
         </activity>
         <activity
             android:name=".lang_ex3_activity"
+            android:exported="true"
+            android:theme="@style/Theme.LanguageFarm">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".exc_sum_activity"
             android:exported="true"
             android:theme="@style/Theme.LanguageFarm">
             <intent-filter>
