--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,31 +13,34 @@
         android:theme="@style/Theme.LanguageFarm"
         tools:targetApi="31">
         <activity
+            android:name=".CampFire"
+            android:exported="false" />
+        <activity
             android:name=".SpeakingExercises2"
             android:exported="false" />
         <activity
             android:name=".start_lang_exc_activity"
             android:exported="true"
-            android:theme="@style/Theme.LanguageFarm"></activity>
+            android:theme="@style/Theme.LanguageFarm" />
         <activity
             android:name=".lang_ex1_activity"
             android:exported="true"
-            android:theme="@style/Theme.LanguageFarm"></activity>
+            android:theme="@style/Theme.LanguageFarm" />
         <activity
             android:name=".lang_ex2_activity"
             android:exported="true"
-            android:theme="@style/Theme.LanguageFarm"></activity>
+            android:theme="@style/Theme.LanguageFarm" />
         <activity
             android:name=".lang_ex3_activity"
             android:exported="true"
-            android:theme="@style/Theme.LanguageFarm"></activity>
+            android:theme="@style/Theme.LanguageFarm" />
         <activity
             android:name=".SpeakingExercises1"
             android:exported="false" />
         <activity
             android:name=".exc_sum_activity"
             android:exported="true"
-            android:theme="@style/Theme.LanguageFarm"></activity>
+            android:theme="@style/Theme.LanguageFarm" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -51,14 +54,11 @@
         <activity
             android:name=".MarketActivity"
             android:exported="true"
-            android:theme="@style/Theme.LanguageFarm">
-        </activity>
+            android:theme="@style/Theme.LanguageFarm"></activity>
         <activity
             android:name=".BuyActivity"
             android:exported="true"
-            android:theme="@style/Theme.LanguageFarm">
-        </activity>
-
+            android:theme="@style/Theme.LanguageFarm"></activity>
     </application>
 
 </manifest>
