--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,26 +22,26 @@
             android:name=".SpeakingExercises2"
             android:exported="false" />
         <activity
-            android:name=".start_lang_exc_activity"
+            android:name=".StartLanguageExerciseActivity"
             android:exported="true"
             android:theme="@style/Theme.LanguageFarm" />
         <activity
-            android:name=".lang_ex1_activity"
+            android:name=".FirstLanguageExerciseActivity"
             android:exported="true"
             android:theme="@style/Theme.LanguageFarm" />
         <activity
-            android:name=".lang_ex2_activity"
+            android:name=".SecondLanguageExerciseActivity"
             android:exported="true"
             android:theme="@style/Theme.LanguageFarm" />
         <activity
-            android:name=".lang_ex3_activity"
+            android:name=".ThirdLanguageExerciseActivity"
             android:exported="true"
             android:theme="@style/Theme.LanguageFarm" />
         <activity
             android:name=".SpeakingExercises1"
             android:exported="false" />
         <activity
-            android:name=".exc_sum_activity"
+            android:name=".ExerciseSumActivity"
             android:exported="true"
             android:theme="@style/Theme.LanguageFarm" />
         <activity
